# siwar-buyme

./: .whitesource  BuyMe_log.txt  README.md  config.json  main.py  main_test_register.py  pyproject.toml
allure-report/: 02728c65-e000-464e-a871-c63feb7eef68-result.json  029e6b03-80ce-46de-855a-c57f1bf8643a-attachment.txt  06298e56-4f53-41ef-89ea-cc56a513d120-result.json  074d029e-a575-43a7-8c13-3f7cca661ca4-result.json  087acec9-a9ea-47f7-9eb5-dac298df8957-result.json  0ab79223-838e-4ac1-8160-64079f9d7d6e-attachment.txt  0e7498b1-25d7-44b3-9ca6-79533611c19d-result.json  1439e89c-817e-491f-8292-9199e4e38a94-attachment.txt  15689482-0c73-499e-b44c-e6ceef1949cb-result.json  17e31a20-018d-4bf7-b70c-050623ac1347-result.json  1acda123-3a7b-437b-af2d-f75e230447f9-result.json  1d1659dd-c37b-4bb2-bfc8-6be839dd473d-result.json  1e6e3b44-bc18-4923-a8c5-1dd97620820f-result.json  1fce3199-4edb-4f4d-aa74-d61f43ea49bb-result.json  247f542a-6df4-45fc-9c62-3ab739ac1384-result.json  24aec15d-1366-4f9c-a8cf-53c72bb5560d-result.json  2543d0c5-f77f-4e94-b482-0a7691e96f10-container.json  28502331-f8e8-4ad4-8d00-ea5dd2d53799-result.json  29df43e2-2970-4f7c-8bc2-35f3b9e32f8a-result.json  2a3dd5d9-30f3-4fe7-8502-7a2c26391f2a-result.json  2c305685-63db-486f-961c-80566dbcbd7e-attachment.txt  2d02d9d8-1b73-49ad-a711-62b00eb4c0f1-attachment.txt  30fd2894-84f3-4d11-8b06-5681125e664b-container.json  3258992f-fc10-423f-a5f4-e5196407d262-result.json  3643c35c-94b0-4e4a-a850-e4f2178cf084-result.json  37879280-42b0-4800-86c4-e230b0b24e40-container.json  38e17737-4e62-4a6c-bfbf-5a9cd4167b73-container.json  (+68 more)
(+10 files in other folders)
