[tool.poetry]
name = "siwar-buyme"
version = "0.1.0"
description = ""
authors = ["SiwarKhateeb"]
readme = "README.md"
packages = [{include = "siwar_buyme"}]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
